modified html js

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
       <div class="doing">
         <h3 class="title">Doing</h3>
-        <ul class="job-doing">
+        <ul class="job-doings">
             
         </ul>
       </div>
 
       <div class="done">
         <h3 class="title">Done</h3>
-        <ul class="job-done">
+        <ul class="jobs-done">
             
         </ul>
       </div>
